--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="favicon.png">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!-- Place favicon.ico in the root directory -->
@@ -20,8 +19,6 @@
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-
-  <!-- Add your site or application content here -->
   <header>
     <div class="header__wrap">
       <button class="rsvp"><span>RSVP</span></button>
@@ -96,11 +93,8 @@
   <section id="registry" class="block block-text block-gold">
     <div class="wrap text-center" data-aos="fade-in-up">
       <h3 class="h1">Registry</h3>
-      <p>Book a hotel room, and do it fast.</p>
-      <p><span class="h4"><strong>Moonstone Manor</strong></span><br>2048 Zeager Rd.<br>Elizabethtown, PA 17022</p>
-      <p><span class="h4"><strong>Ceremony</strong></span><br>3:30pm</p>
-      <p><span class="h4"><strong>Cocktails</strong></span><br>5:30pm</p>
-      <p><span class="h4"><strong>Reception</strong></span><br>6:30pm</p>
+      <p>We've setup a Honeyfund for our dream honeymoon and future home.</p>
+      <div style="width:200px;margin:0 auto;"><a href="http://www.honeyfund.com/wedding/JeremyandAparna" style="text-align:left;background:url('http://www.honeyfund.com/share/honeyfund3.png') no-repeat;display:block;width:200px;height:100px;text-indent:-9999em;">Visit our honeyfund at Honeyfund.com, the free honeymoon registry</a></div>
     </div>
   </section>
 
