--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Jeremy &amp; Aparna</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
 
   <link rel="apple-touch-icon" href="favicon.png">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
