--- a/index.html
+++ b/index.html
@@ -28,6 +28,107 @@
       <button class="menu" id="toggle-nav"><span>Menu</span></button>
     </div>
   </header>
+  <nav>
+    <div class="nav__wrap">
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#our-story">Our Story</a></li>
+        <li><a href="#details">Wedding Details</a></li>
+        <li><a href="#accommodations">Accommodations</a></li>
+        <li><a href="#registry">Registry</a></li>
+        <li><a href="#photos">Photos</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <section id="rsvp">
+    <div class="rsvp__wrap">
+      <div id="close-rsvp">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="32" height="32"><path d="M505.9 6.1c-8.1-8.1-21.2-8.1-29.2 0L6.1 476.7c-8.1 8.1-8.1 21.2 0 29.2C10.1 510 15.4 512 20.7 512c5.3 0 10.6-2 14.6-6.1L505.9 35.3C514 27.2 514 14.1 505.9 6.1z" /><path d="M505.9 476.7L35.3 6.1c-8.1-8.1-21.2-8.1-29.2 0 -8.1 8.1-8.1 21.2 0 29.2l470.6 470.6c4 4 9.3 6.1 14.6 6.1 5.3 0 10.6-2 14.6-6.1C514 497.9 514 484.8 505.9 476.7z" /></svg>
+      </div>
+      <div id="pwd-form" class="rsvp-flex rsvp__password text-center">
+        <form>
+          <p>Please enter the password below, or email us at hello@jeremyandaparna.com for help!</p>
+          <input id="pwd" type="text" name="pwd" placeholder="Password" />
+        </form>
+      </div>
+      <div id="pwd-protected" class="rsvp-flex rsvp__form" style="display: none;">
+        <form id="rsvp-form" name="rsvp" method="POST" netlify-honeypot="bot-field" netlify>
+          <h2 class="text-center">RSVP</h2>
+          <p class="text-center"><small><strong>Kindly RSVP by December 1st 2018</strong></small></p>
+          <input type="hidden" name="form-name" value="rsvp-form">
+          <p class="hidden">
+            Don't fill this out if you're human: <input name="bot-field">
+          </p>
+          <h4>Your Name</h4>
+          <div class="form-group">
+            <div class="row">
+              <div class="col col-half">
+                <input type="text" name="first_name_1" value="" placeholder="First" required>
+              </div>
+              <div class="col col-half">
+                <input type="text" name="first_name_2" value="" placeholder="Last" required>
+              </div>
+            </div>
+          </div>
+          <h4>Number of Guests</h4>
+          <div class="form-group">
+            <div class="row">
+              <div class="col col-full">
+                <span class="js-qty--minus">–</span>
+                <input type="text" pattern="[0-9]*" id="guest-count" name="guest_count" value="1">
+                <span class="js-qty--plus">+</span>
+              </div>
+            </div>
+          </div>
+          <h4>Mailing Address</h4>
+          <div class="form-group">
+            <div class="row">
+              <div class="col col-half">
+                <input type="text" name="address_1" placeholder="Address Line 1" required>
+              </div>
+              <div class="col col-half">
+                <input type="text" name="address_2" placeholder="Address Line 2">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col col-half">
+                <input type="text" name="city" placeholder="City/Town" required>
+              </div>
+              <div class="col col-half">
+                <input type="text" name="state" placeholder="State/Province" required>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col col-half">
+                <input type="text" name="postal_code" placeholder="Zip/Postal Code" required>
+              </div>
+            </div>
+          </div>
+          <h4>Contact</h4>
+          <div class="form-group">
+            <div class="row">
+              <div class="col col-half">
+                <input type="email" name="email" placeholder="your@email.com" required>
+              </div>
+              <div class="col col-half">
+                <input type="text" name="phone" placeholder="Phone Number" required>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col col-full">
+              <input type="submit" value="Submit RSVP" class="btn btn--green">
+            </div>
+          </div>
+        </form>
+        <div style="display: none;" id="rsvp-success">
+          <p>Thank you so much! Your RSVP has been submitted and we can't wait to celebrate with you. If you need to make any changes or if you have any questions, please email us at hello@jeremyandaparna.com</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div id="rsvp__bg" class="close-rsvp"></div>
   <section id="home" class="hero hero-main">
     <div class="hero__text hero__text-bottom" data-aos="zoom-out-up">
       <h1>Jeremy&nbsp;<span>+</span>&nbsp;Aparna Are&nbsp;Getting&nbsp;Married</h1>
@@ -37,9 +138,14 @@
   <section id="our-story" class="block block-text">
     <div class="wrap" data-aos="fade-in-up">
       <h3 class="h1 text-center">Our Story</h3>
-      <p class="big">Our story began in 2015, just as Aparna was deleting her online dating profile. Jeremy had sent his first message to her, asking if her law practice was anything like <a href="#" target="_blank">Saul Goodman&#8217;s</a>. Aparna loves a good Bob Odenkirk reference. She decided to give online dating a final try and agreed to a date in Bushwick, Brooklyn.</p>
-      <p class="big">They agreed to meet at Heavy Woods on 3/28/15 at 7:00pm. Aparna pushed it to 8:00pm. Jeremy showed up 15 minutes early. Aparna arrived 50 minutes late (she still blames the &#8220;G Train&#8221; for this incident). Sheepishly entering the establishment at 8:50pm, she thought, <em>man, I better be charming to make up for the G Train.</em></p>
-      <p class="big">And she was. They talked and laughed for hours. He walked her to the train, ever the gentleman. By the next afternoon, they had arranged their second date. Three days later, Jeremy made Aparna a vegetarian baked ziti. The rest, as they say, was history.</p>
+      <div id="our-story-container">
+        <p class="big">Our story began in 2015, just as Aparna was deleting her online dating profile. Jeremy had sent his first message to her, asking if her law practice was anything like <a href="http://www.amc.com/shows/better-call-saul/saul-goodman-esq/" target="_blank">Saul Goodman&#8217;s</a>. Aparna loves a good Bob Odenkirk reference. She decided to give online dating a final try and agreed to a date in Bushwick, Brooklyn.</p>
+        <p class="big">They agreed to meet at Heavy Woods on 3/28/15 at 7:00pm. Aparna pushed it to 8:00pm. Jeremy showed up 15 minutes early. Aparna arrived 50 minutes late (she still blames the &#8220;G Train&#8221; for this incident). Sheepishly entering the establishment at 8:50pm, she thought, <em>man, I better be charming to make up for the G Train.</em></p>
+        <p class="big">And she was. They talked and laughed for hours. He walked her to the train, ever the gentleman. By the next afternoon, they had arranged their second date. Three days later, Jeremy made Aparna a vegetarian baked ziti. The rest, as they say, was history.</p>
+        <div id="more-story">
+          <button class="btn btn--gold" id="more-story__btn">Tell Me More...</button>
+        </div>
+      </div>
     </div>
   </section>
   <div class="hero hero-date">
@@ -54,16 +160,19 @@
       <div class="row row-center">
         <div class="col col-half">
           <h2>Location</h2>
-          <p><!--span class="h4"><strong>Moonstone Manor</strong></span><br-->Moonstone Manor<br>2048 Zeager Rd.<br>Elizabethtown, PA 17022<br><a class="btn" href="#">View on Map</a></p>
+          <p><!--span class="h4"><strong>Moonstone Manor</strong></span><br-->Moonstone Manor<br>2048 Zeager Rd.<br>Elizabethtown, PA 17022</p>
+          <p><a class="btn btn--gold" href="https://goo.gl/maps/Bvc1qhTkqsF2" target="_blank">View on Map</a></p>
+          <br>
           <h2 style="margin-top: 10px;">Dress Code</h2>
-          <p>Look nice and be ready to dance. Indian or American, just be comfortable &#9786;</p>
+          <p>Look nice and be ready to dance. Indian or American, just be comfortable <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" width="18" height="18"><path d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 464c-119.1 0-216-96.9-216-216S128.9 40 248 40s216 96.9 216 216-96.9 216-216 216zm90.2-146.2C315.8 352.6 282.9 368 248 368s-67.8-15.4-90.2-42.2c-5.7-6.8-15.8-7.7-22.5-2-6.8 5.7-7.7 15.7-2 22.5C161.7 380.4 203.6 400 248 400s86.3-19.6 114.8-53.8c5.7-6.8 4.8-16.9-2-22.5-6.8-5.6-16.9-4.7-22.6 2.1zM168 240c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32zm160 0c17.7 0 32-14.3 32-32s-14.3-32-32-32-32 14.3-32 32 14.3 32 32 32z"/></svg></p>
         </div>
         <div class="col col-half">
           <h2>Schedule</h2>
           <div id="schedule" data-aos="flip-up">
-            <p><span class="h4"><strong>Ceremony</strong></span><br>3:30pm</p>
+            <p><em><small>Saturday<br>May 25, 2019</small></em></p>
+            <p><span class="h4"><strong>Ceremony</strong></span><br>4:00pm</p>
             <p><span class="h4"><strong>Cocktails</strong></span><br>5:30pm</p>
-            <p><span class="h4"><strong>Reception</strong></span><br>6:30pm</p>
+            <p><span class="h4"><strong>Reception</strong></span><br>7:00pm</p>
           </div>
         </div>
       </div>
@@ -73,19 +182,25 @@
   <section id="accommodations" class="block block-green">
     <div class="wrap text-center" data-aos="fade-in-up">
       <h3 class="h1">Accommodations</h3>
-      <p>Blocks of rooms have been reserved at the hotels below. Shuttle service to and from the wedding will be provided at any of the three hotels.</p>
-      <div class="row row-center">
+      <p>Blocks of rooms have been reserved at the hotels below. Shuttle service to and from the wedding is available at any of the three hotels.</p>
+      <div id="hotels" class="row row-top">
         <div class="col col-third">
-          <h4><strong>SpringHill Suites by Marriott Harrisburg Hershey</strong></h4>
-          15 Capital Dr.<br>Harrisburg, PA<br>(717) 540-5100<br><em>Group Name: Peters Wedding Block<br>Book by 4/24/19</em>
+          <h4><span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M396.8 224h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm-128-96h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm128 0h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm-256 0h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm128 96h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zM568 32c4.42 0 8-3.58 8-8V8c0-4.42-3.58-8-8-8H8C3.58 0 0 3.58 0 8v16c0 4.42 3.58 8 8 8h23.98v448H8c-4.42 0-8 3.58-8 8v16c0 4.42 3.58 8 8 8h560c4.42 0 8-3.58 8-8v-16c0-4.42-3.58-8-8-8h-24V32h24zM320 480h-64v-80c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v80zm192 0H352v-80c0-26.47-21.53-48-48-48h-32c-26.47 0-48 21.53-48 48v80H63.98V32H512v448zM140.8 224h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm26.31 157.66l16.25 2.26c4.3.6 8.11-2.24 9.07-6.36 9.96-42.83 49.74-74.28 95.58-74.28s85.61 31.45 95.58 74.28c.96 4.12 4.77 6.96 9.07 6.36l16.25-2.26c4.6-.64 7.9-4.92 6.94-9.34C403.22 314.29 349.72 271.5 288 271.5s-115.22 42.79-127.83 100.81c-.96 4.43 2.34 8.71 6.94 9.35z"/></svg></span> <strong>SpringHill Suites by Marriott Harrisburg Hershey</strong></h4>
+          <p>15 Capital Dr.<br>Harrisburg, PA<br>(717) 540-5100</p>
+          <p><a class="btn" href="#">View Website</a></p>
+          <p><em>Group Name: Peters Wedding Block<br>Book by 4/24/19</em></p>
         </div>
         <div class="col col-third">
-          <h4><strong>Hilton Harrisburg</strong></h4>
-          1 North 2nd St.<br>Harrisburg, PA<br>(717) 233-6000<br><em>Group Code:  *Coming Soon*<br>Book by 4/26/19</em>
+          <h4><span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M396.8 224h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm-128-96h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm128 0h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm-256 0h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm128 96h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zM568 32c4.42 0 8-3.58 8-8V8c0-4.42-3.58-8-8-8H8C3.58 0 0 3.58 0 8v16c0 4.42 3.58 8 8 8h23.98v448H8c-4.42 0-8 3.58-8 8v16c0 4.42 3.58 8 8 8h560c4.42 0 8-3.58 8-8v-16c0-4.42-3.58-8-8-8h-24V32h24zM320 480h-64v-80c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v80zm192 0H352v-80c0-26.47-21.53-48-48-48h-32c-26.47 0-48 21.53-48 48v80H63.98V32H512v448zM140.8 224h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm26.31 157.66l16.25 2.26c4.3.6 8.11-2.24 9.07-6.36 9.96-42.83 49.74-74.28 95.58-74.28s85.61 31.45 95.58 74.28c.96 4.12 4.77 6.96 9.07 6.36l16.25-2.26c4.6-.64 7.9-4.92 6.94-9.34C403.22 314.29 349.72 271.5 288 271.5s-115.22 42.79-127.83 100.81c-.96 4.43 2.34 8.71 6.94 9.35z"/></svg></span> <strong>Hilton Harrisburg</strong></h4>
+          <p>1 North 2nd St.<br>Harrisburg, PA<br>(717) 233-6000</p>
+          <p><a class="btn" href="#">View Website</a></p>
+          <p><em>Group Code:  *Coming Soon*<br>Book by 4/26/19</em></p>
         </div>
         <div class="col col-third">
-          <h4><strong>Courtyard by Marriott Harrisburg/Hershey</strong></h4>
-          725 Eisenhower Blvd.<br>Harrisburg, PA<br>(717) 558-8544<br><em>Group Code: PETC<br>Book by 3/25/19</em>
+          <h4><span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M396.8 224h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm-128-96h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm128 0h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm-256 0h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm128 96h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zM568 32c4.42 0 8-3.58 8-8V8c0-4.42-3.58-8-8-8H8C3.58 0 0 3.58 0 8v16c0 4.42 3.58 8 8 8h23.98v448H8c-4.42 0-8 3.58-8 8v16c0 4.42 3.58 8 8 8h560c4.42 0 8-3.58 8-8v-16c0-4.42-3.58-8-8-8h-24V32h24zM320 480h-64v-80c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v80zm192 0H352v-80c0-26.47-21.53-48-48-48h-32c-26.47 0-48 21.53-48 48v80H63.98V32H512v448zM140.8 224h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm26.31 157.66l16.25 2.26c4.3.6 8.11-2.24 9.07-6.36 9.96-42.83 49.74-74.28 95.58-74.28s85.61 31.45 95.58 74.28c.96 4.12 4.77 6.96 9.07 6.36l16.25-2.26c4.6-.64 7.9-4.92 6.94-9.34C403.22 314.29 349.72 271.5 288 271.5s-115.22 42.79-127.83 100.81c-.96 4.43 2.34 8.71 6.94 9.35z"/></svg></span> <strong>Courtyard by Marriott Harrisburg/Hershey</strong></h4>
+          <p>725 Eisenhower Blvd.<br>Harrisburg, PA<br>(717) 558-8544</p>
+          <p><a class="btn" href="#">View Website</a></p>
+          <p><em>Group Code: PETC<br>Book by 3/25/19</em></p>
         </div>
     </div>
   </section>
@@ -94,34 +209,43 @@
     <div class="wrap text-center" data-aos="fade-in-up">
       <h3 class="h1">Registry</h3>
       <p>We've setup a Honeyfund for our dream honeymoon and future home.</p>
-      <div style="width:200px;margin:0 auto;"><a href="http://www.honeyfund.com/wedding/JeremyandAparna" style="text-align:left;background:url('http://www.honeyfund.com/share/honeyfund3.png') no-repeat;display:block;width:200px;height:100px;text-indent:-9999em;">Visit our honeyfund at Honeyfund.com, the free honeymoon registry</a></div>
+      <p><a class="btn btn--pink" href="http://www.honeyfund.com/wedding/JeremyandAparna" target="_blank">View Our Honeyfund</a></p>
+      <!--div style="width:200px;margin:0 auto;"><a href="http://www.honeyfund.com/wedding/JeremyandAparna" style="text-align:left;background:url('http://www.honeyfund.com/share/honeyfund3.png') no-repeat;display:block;width:200px;height:100px;text-indent:-9999em;">Visit our honeyfund at Honeyfund.com, the free honeymoon registry</a></div-->
     </div>
   </section>
 
-  <nav>
-    <div class="nav__wrap">
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#our-story">Our Story</a></li>
-        <li><a href="#details">Wedding Details</a></li>
-        <li><a href="#accommodations">Accommodations</a></li>
-        <li><a href="#registry">Registry</a></li>
-        <li><a href="#photos">Photos</a></li>
-      </ul>
+  <section id="photos" class="block block-navy">
+    <div class="wrap text-center">
+      <h3 class="h1 text-center">Photos</h3>
+      <div class="photos__slider" id="photo-slider">
+        <div>
+          <img src="img/gallery_006.jpg" alt="">
+        </div>
+        <div>
+          <img src="img/gallery_002.jpg" alt="">
+        </div>
+        <div>
+          <img src="img/gallery_004.jpg" alt="">
+        </div>
+        <div>
+          <img src="img/gallery_003.jpg" alt="">
+        </div>
+        <div>
+          <img src="img/gallery_005.jpg" alt="">
+        </div>
+        <div>
+          <img src="img/gallery_001.jpg" alt="">
+        </div>
+        <div>
+          <img src="img/gallery_007.jpg" alt="">
+        </div>
+      </div>
     </div>
-  </nav>
+  </section>
+
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.3.1.min.js"><\/script>')</script>
-  <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
