--- a/index.html
+++ b/index.html
@@ -53,73 +53,57 @@
         </form>
       </div>
       <div id="pwd-protected" class="rsvp-flex rsvp__form" style="display: none;">
-        <form id="rsvp-form" name="rsvp" method="POST" netlify-honeypot="bot-field" netlify>
+        <form id="rsvp-form" name="rsvp" action="https://jeremyandaparna.us19.list-manage.com/subscribe/post-json?u=93a44184d88747c9e4bc3512f&amp;id=c9f9caac68" method="get">
           <h2 class="text-center">RSVP</h2>
           <p class="text-center"><small><strong>Kindly RSVP by December 1st 2018</strong></small></p>
-          <input type="hidden" name="form-name" value="rsvp-form">
-          <p class="hidden">
-            Don't fill this out if you're human: <input name="bot-field">
-          </p>
-          <h4>Your Name</h4>
           <div class="form-group">
             <div class="row">
               <div class="col col-half">
-                <input type="text" name="first_name_1" value="" placeholder="First" required>
+                <input type="text" name="FNAME" value="" placeholder="First" required>
               </div>
               <div class="col col-half">
-                <input type="text" name="first_name_2" value="" placeholder="Last" required>
+                <input type="text" name="LNAME" value="" placeholder="Last" required>
               </div>
             </div>
           </div>
-          <h4>Number of Guests</h4>
           <div class="form-group">
             <div class="row">
               <div class="col col-full">
-                <span class="js-qty--minus">–</span>
-                <input type="text" pattern="[0-9]*" id="guest-count" name="guest_count" value="1">
-                <span class="js-qty--plus">+</span>
+                <input type="email" name="EMAIL" placeholder="your@email.com" required>
               </div>
             </div>
           </div>
-          <h4>Mailing Address</h4>
           <div class="form-group">
             <div class="row">
-              <div class="col col-half">
-                <input type="text" name="address_1" placeholder="Address Line 1" required>
-              </div>
-              <div class="col col-half">
-                <input type="text" name="address_2" placeholder="Address Line 2">
-              </div>
-            </div>
-            <div class="row">
-              <div class="col col-half">
-                <input type="text" name="city" placeholder="City/Town" required>
-              </div>
-              <div class="col col-half">
-                <input type="text" name="state" placeholder="State/Province" required>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col col-half">
-                <input type="text" name="postal_code" placeholder="Zip/Postal Code" required>
+              <div class="col col-full">
+                <label class="radio">
+                  <input name="ATTENDING" type="radio" value="Will Attend" checked id="rsvp-accept" class="rsvp-radio">
+                  <span>Will Attend</span>
+                </label>
+                <div id="guest-count-container">
+                  <h4>Number of Guests</h4>
+                  <span class="js-qty--minus">–</span>
+                  <input type="text" pattern="[0-9]*" id="guest-count" name="GUESTS" value="1">
+                  <span class="js-qty--plus">+</span>
+                </div>
+                <label class="radio">
+                  <input name="ATTENDING" type="radio" value="Will Not Attend" id="rsvp-decline" class="rsvp-radio">
+                  <span>Will Not Attend</span>
+                </label>
               </div>
             </div>
           </div>
-          <h4>Contact</h4>
           <div class="form-group">
             <div class="row">
-              <div class="col col-half">
-                <input type="email" name="email" placeholder="your@email.com" required>
-              </div>
-              <div class="col col-half">
-                <input type="text" name="phone" placeholder="Phone Number" required>
+              <div class="col col-full">
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_93a44184d88747c9e4bc3512f_c9f9caac68" tabindex="-1" value=""></div>
+                <input type="submit" value="Submit RSVP" class="btn btn--green">
               </div>
             </div>
           </div>
-          <div class="row">
-            <div class="col col-full">
-              <input type="submit" value="Submit RSVP" class="btn btn--green">
-            </div>
+          <div class="form-group">
+            <div id="rsvp-result"></div>
           </div>
         </form>
         <div style="display: none;" id="rsvp-success">
@@ -193,8 +177,8 @@
         <div class="col col-third">
           <h4><span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M396.8 224h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm-128-96h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm128 0h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm-256 0h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm128 96h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zM568 32c4.42 0 8-3.58 8-8V8c0-4.42-3.58-8-8-8H8C3.58 0 0 3.58 0 8v16c0 4.42 3.58 8 8 8h23.98v448H8c-4.42 0-8 3.58-8 8v16c0 4.42 3.58 8 8 8h560c4.42 0 8-3.58 8-8v-16c0-4.42-3.58-8-8-8h-24V32h24zM320 480h-64v-80c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v80zm192 0H352v-80c0-26.47-21.53-48-48-48h-32c-26.47 0-48 21.53-48 48v80H63.98V32H512v448zM140.8 224h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm26.31 157.66l16.25 2.26c4.3.6 8.11-2.24 9.07-6.36 9.96-42.83 49.74-74.28 95.58-74.28s85.61 31.45 95.58 74.28c.96 4.12 4.77 6.96 9.07 6.36l16.25-2.26c4.6-.64 7.9-4.92 6.94-9.34C403.22 314.29 349.72 271.5 288 271.5s-115.22 42.79-127.83 100.81c-.96 4.43 2.34 8.71 6.94 9.35z"/></svg></span> <strong>Hilton Harrisburg</strong></h4>
           <p>1 North 2nd St.<br>Harrisburg, PA<br>(717) 233-6000</p>
-          <p><a class="btn" href="#">View Website</a></p>
-          <p><em>Group Code:  *Coming Soon*<br>Book by 4/26/19</em></p>
+          <p><a class="btn" href="https://www.hilton.com/en/hi/groups/personalized/M/MDTHHHF-APWB-20190524/index.jhtml?WT.mc_id=POG" target="_blank">View Website</a></p>
+          <p><em>Group Code: APWB<br>Book by 4/26/19</em></p>
         </div>
         <div class="col col-third">
           <h4><span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M396.8 224h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm-128-96h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm128 0h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm-256 0h38.4c6.4 0 12.8-6.4 12.8-12.8V76.8c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm128 96h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zM568 32c4.42 0 8-3.58 8-8V8c0-4.42-3.58-8-8-8H8C3.58 0 0 3.58 0 8v16c0 4.42 3.58 8 8 8h23.98v448H8c-4.42 0-8 3.58-8 8v16c0 4.42 3.58 8 8 8h560c4.42 0 8-3.58 8-8v-16c0-4.42-3.58-8-8-8h-24V32h24zM320 480h-64v-80c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v80zm192 0H352v-80c0-26.47-21.53-48-48-48h-32c-26.47 0-48 21.53-48 48v80H63.98V32H512v448zM140.8 224h38.4c6.4 0 12.8-6.4 12.8-12.8v-38.4c0-6.4-6.4-12.8-12.8-12.8h-38.4c-6.4 0-12.8 6.4-12.8 12.8v38.4c0 6.4 6.4 12.8 12.8 12.8zm26.31 157.66l16.25 2.26c4.3.6 8.11-2.24 9.07-6.36 9.96-42.83 49.74-74.28 95.58-74.28s85.61 31.45 95.58 74.28c.96 4.12 4.77 6.96 9.07 6.36l16.25-2.26c4.6-.64 7.9-4.92 6.94-9.34C403.22 314.29 349.72 271.5 288 271.5s-115.22 42.79-127.83 100.81c-.96 4.43 2.34 8.71 6.94 9.35z"/></svg></span> <strong>Courtyard by Marriott Harrisburg/Hershey</strong></h4>
