--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html class="no-js" lang="">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127101478-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-127101478-1');
+  </script>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Jeremy &amp; Aparna</title>
@@ -199,7 +208,7 @@
                 <div id="guest-count-container">
                   <h4>Number of Guests</h4>
                   <span class="js-qty--minus">–</span>
-                  <input type="text" pattern="[0-9]*" id="guest-count" name="GUESTS" value="1">
+                  <input type="text" pattern="[0-9]*" id="guest-count" name="GUESTS" value="0">
                   <span class="js-qty--plus">+</span>
                 </div>
                 <label class="radio">
