--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
                   <span>Will Attend</span>
                 </label>
                 <div id="guest-count-container">
-                  <h4>Number of Guests</h4>
+                  <h4>Number Attending</h4>
                   <span class="js-qty--minus">–</span>
-                  <input type="text" pattern="[0-9]*" id="guest-count" name="GUESTS" value="0">
+                  <input type="text" pattern="[0-9]*" id="guest-count" name="GUESTS" value="1">
                   <span class="js-qty--plus">+</span>
                 </div>
                 <label class="radio">
