--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Jeremy &amp; Aparna</title>
-  <meta name="description" content="">
+  <meta name="description" content="Getting Married May 25, 2019">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
 
   <link rel="apple-touch-icon" href="favicon.png">
