--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <div id="pwd-protected" class="rsvp-flex rsvp__form" style="display: none;">
         <form id="rsvp-form" name="rsvp" action="https://jeremyandaparna.us19.list-manage.com/subscribe/post-json?u=93a44184d88747c9e4bc3512f&amp;id=c9f9caac68" method="get">
           <h2 class="text-center">RSVP</h2>
-          <p class="text-center"><small><strong>Kindly RSVP by Dec 31st, 2018</strong></small></p>
+          <p class="text-center"><small><strong>Kindly RSVP by March 15th</strong></small></p>
           <div class="form-group">
             <div class="row">
               <div class="col col-half">
