--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="apple-touch-icon" href="favicon.png">
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <!-- Place favicon.ico in the root directory -->
-
+  <link rel="preload" href="css/main.css" as="style">
   <link rel="stylesheet" href="css/main.css">
 </head>
 
